# libfw-maths

./: CMakeLists.cmake  CMakeLists.txt  LICENSE
include/flyingwhales/: maths.hpp
include/flyingwhales/maths/: matrix4.hpp  metric2.hpp  metric2_impl.hpp  metric3.hpp  metric3_impl.hpp  metric4.hpp  metric4_impl.hpp  quaternion.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/: matrix4.cpp  quaternion.cpp  temp.cpp  vector2.cpp  vector3.cpp  vector4.cpp
